Mejorando diseño del aplicativo.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="guardardato">Guardar datos</string>
 
 
-    <string name="textocrearcuenta">Si aun no tienes una cuenta no esperes mas y pulsa en "crear cuenta"</string>
+    <string name="textocrearcuenta">Si aún no tienes una cuenta no esperes más y pulsa en "crear cuenta"</string>
     <string name="textoiniciarsesion">Si ya estas registrado solo pulsa en "iniciar sesión"</string>
 
     <string name="bien">Felicitaciones!!!</string>
