probando la rama de desarrollo, se supone que este commit solo deberia estar en la rama de desarrollo.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 
     <string name="iniciarsesion">Iniciar Sesión </string>
     <string name="crearcuenta">Crear Cuenta </string>
+    <string name="tituloiniciarsesion">Iniciar Sesión </string>
 
     <string name="datos">Ingrese los siguientes datos para crear su propia cuenta y pertenecer a esta gran comunidad. </string>
 
