Se termina el modulo de integracion y cariño.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+
+
     <string name="app_name">Patitas sanas y felices</string>
 
 
@@ -132,7 +134,9 @@
 
     <string name="tips_jugar">
 
-        <b>Tips para jugar con tu mascota</b> \n\n
+         <b>
+            Tips para jugar con tu mascota \n\n
+         </b>
 
     Nunca hagas enojar a tu perro mientras juegan a tirar la cuerda o el trapo . El perro puede confundir el juego con algo peligroso en donde debe defenderse.\n\n
 
@@ -146,14 +150,25 @@
 
     Ten cuidado con los cachorros pequeños, porque suelen ser más frágiles de lo que aparentan. \n\n
 
-    Evita los juegos demasiado competitivos o agresivos – los juegos de fuerza y los forcejeos pueden enseñar a tu perro a ser agresivo con otras personas o con otros perros.\n\n
+    Evita los juegos demasiado competitivos o agresivos. los juegos de fuerza y los forcejeos pueden enseñar a tu perro a ser agresivo con otras personas o con otros perros.\n\n
 
-    Evita los juegos con palos o piedras – los palos pueden partirse en la boca. \n\n
+    Evita los juegos con palos o piedras. los palos pueden partirse en la boca. \n\n
 
-    Tu perro tiene que aprender a escucharte – si no hace lo que tú le pides, deja de jugar e ignórale. \n\n
+    Tu perro tiene que aprender a escucharte. si no hace lo que tú le pides, deja de jugar e ignórale. \n\n
 
     Los momentos de juego son los que se deben aprovechar para educar al cachorro, tanto en el morder como en la obediencia y demostrar que es el dueño el que tiene el control. Para ello, cuando vayas a darle un juguete, lánzalo no se lo des en la boca, porque
-    interpretará que te lo ha quitado y que tiene él el control. Por la misma razón, nunca vayas detrás suyo a quitarle un juguete, debes enseñarle que sea él quien te lo traiga o quien te persiga a ti.
+    interpretará que te lo ha quitado y que tiene él el control. Por la misma razón, nunca vayas detrás suyo a quitarle un juguete, debes enseñarle que sea él quien te lo traiga o quien te persiga a ti. \n\n
+
+
+         <b>
+            Datos que debe poseer un collar de identificación \n\n
+        </b>
+
+            -Nombre de la mascota. \n
+            -Numero de contacto del dueño ya sea celular o red fija.
+
+
+
 
     </string>
 
